--- a/NFSvol_Creation_Student01.yaml
+++ b/NFSvol_Creation_Student01.yaml
@@ -8,7 +8,7 @@
     username: "{{ username }}"
     password: "{{ password }}"
     vserver:  "{{ vserver }}"
-    aggr: "{{ agg }}"
+    aggr: "{{ aggr }}"
     vol_name: "{{ vol_name }}"
 
   tasks:
