--- a/NFSvol_Creation_Student01.yaml
+++ b/NFSvol_Creation_Student01.yaml
@@ -1,29 +1,19 @@
 ---
 - name: ontap
   hosts: localhost 
-  gather_facts: no
-  connection: local
-  vars:
-    hostname: "{{ hostname }}"
-    username: "{{ username }}"
-    password: "{{ password }}"
-    vserver:  "{{ vserver }}"
-    aggr: "{{ aggr }}"
-    vol_name: "{{ vol_name }}"
-
+  collections:
+    - netapp.ontap
+  gather_facts: false
   tasks:
   - name: Create FlexVol
     na_ontap_volume:
       state: present
-      name: "{{ vol_name }}"
-      vserver: "{{ vserver }}"
-      aggregate_name: "{{ aggr }}"
-      size: "{{ size }}" 
+      name: ansibleVolume01
+      vserver: poc_svm
+      aggregate_name: netapp1
+      size: 1
       size_unit: gb
-      policy: default
-      junction_path: "/{{ vol_name }}"
-      hostname: "{{ hostname }}"
-      username: "{{ username }}"
-      password: "{{ password }}"
-      policy: default
       space_guarantee: none
+      hostname: 121.126.207.110
+      username: admin
+      password: netapp123!
